# Agentic-Cybersec-Threat-Analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  Procfile.dev  README.md  alert_rules.yml  docker-compose.yml  nginx.conf  prometheus.yml
.github/workflows/: ci.yml
backend/: cache.py  config.py  db.py  db_users.py  guardrails.py  logging_config.py  mailer.py  main.py  metrics.py  pyproject.toml  security.py  version.py  webhooks.py
backend/agents/: attack_classifier.py  cve_extractor.py  graph.py  playbook_generator.py  state.py
backend/api/: auth.py  auth_routes.py  oauth.py  rate_limit.py  routes.py  schemas.py
backend/ingestion/: abusech_fetcher.py  cisa_kev.py  ingest_attack.py  mitre_loader.py  nvd_fetcher.py  otx_fetcher.py
backend/rag/: chunker.py  embedder.py  qdrant_store.py  retriever.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_cache.py  test_db.py  test_e2e.py  test_ingestion.py  test_logging.py  test_metrics.py  test_rag.py  test_rate_limit.py  test_webhooks.py
docs/: architecture.html  index.html
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdminUsersPage.tsx  AnalysisView.tsx  Dashboard.tsx  Layout.tsx  LoginPage.tsx  SettingsPage.tsx  ThreatFeed.tsx  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/types/: index.ts
scripts/: bump_version.py  ensure-ollama.sh  wait-for-qdrant.sh
